Updating index.html file

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
 		</section>
 
-		<section id="contact-form" class="dark-bg padding-top-bottom">
+		<!-- <section id="contact-form" class="dark-bg padding-top-bottom">
 
 			<div class="container">
 
@@ -321,7 +321,7 @@
 		        </div>
 		    </div>
 		</div>
-		</section>
+		</section> -->
  		<!-- ==============================================
 		PORTFOLIO
 		=============================================== -->
