--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 					<div class="col-sm-12 text-col text-center">
 
-						<h1>Hi, I'm MALIK IAVARI.</h1>
+						<h1>Hi, I'm MALIK IAVARI</h1>
 						<p>software developer, entrepreneur and martial artist</p>
 
 					</div>
