Updating index.html file

--- a/index.html
+++ b/index.html
@@ -216,9 +216,11 @@
 
 						<img class="img-responsive img-center img-circle scrollimation fade-left" src="assets/profile.jpg" alt="" />
 
-						<p class="text-center scrollimation fade-in"> I am from Kazan, Russia but currently live in Toronto, Canada.
-							I offer competitive business IT solutions in web and mobile development. My main goal is to make the product attractive for end users
-							and help my clients to create experiences, services and products that play a meaningful role in people's lives.</p>
+						<p class="text-center scrollimation fade-in"> I have the savvy, experience, and superior communication ability to be an asset to your company.
+							I am very competent in IT, my passion is to deliver my best work, bring the company more money and stick on top positions.
+							Moreover, I offer competitive business IT solutions in web and mobile development.
+							My main goal is to make the product attractive for end users and help my clients to create experiences,
+							services and products that play a meaningful role in people's lives.</p>
 
 					</div>
 
@@ -252,7 +254,7 @@
 					</div>
 					<div class="col-sm-6 col-md-3 text-center">
 						<span class="chart" data-percent="85"><span class="percent">85</span></span>
-						<h2 class="text-center">Problem-Solving, Analytical and Project Management</h2>
+						<h2 class="text-center">Problem-Solving, Analytical and Project Management Skills</h2>
 					</div>
 					<div class="col-sm-6 col-md-3 text-center">
 						<span class="chart" data-percent="90"><span class="percent">90</span></span>
