Updating index.html file

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						</div>
 
 						<h2>Backend Web Development</h2>
-						<p>Java, Spring Framework, Vue.js</br> </p>
+						<p>Innovative and Advanced Technologies used to make your backend progressive and functional.</br> </p>
 
 					</div>
 
