--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en-US" class="no-js">
 	<head>
 
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114656878-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-114656878-1');
+		</script>
+
 		<!-- ==============================================
 		Title and Meta Tags
 		=============================================== -->
