--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 		  gtag('config', 'UA-114656878-1');
 		</script>
 
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-WGBJHH6');</script>
+		<!-- End Google Tag Manager -->
+
 		<!-- ==============================================
 		Title and Meta Tags
 		=============================================== -->
@@ -56,6 +64,11 @@
 	</head>
 
 	<body data-spy="scroll" data-target="#main-nav" data-offset="400">
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGBJHH6"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		
 		<!-- ==============================================
 		MAIN NAV
 		=============================================== -->
