--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGBJHH6"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
-		
+
 		<!-- ==============================================
 		MAIN NAV
 		=============================================== -->
@@ -240,11 +240,7 @@
 
 						<img class="img-responsive img-center img-circle scrollimation fade-left" src="assets/profile.jpg" alt="" />
 
-						<p class="text-center scrollimation fade-in"> I have the savvy, experience, and superior communication ability to be an asset to your company.
-							I am very competent in IT, my passion is to deliver my best work, bring the company more money and stick on top positions.
-							Moreover, I offer competitive business IT solutions in web and mobile development.
-							My main goal is to make the product attractive for end users and help my clients to create experiences,
-							services and products that play a meaningful role in people's lives.</p>
+						<p class="text-center scrollimation fade-in"> I have the savvy, experience, and superior communication ability to be an asset to your company. I am super competent in IT, my passion is to deliver my best work, make the company more profitable and stick on top positions. Moreover, I offer competitive business IT solutions in web and mobile development. My main goal is to make the product attractive for end users and help my clients to create experiences, services and products that play a meaningful role in people's lives.</p>
 
 					</div>
 
@@ -351,14 +347,14 @@
  		<!-- ==============================================
 		PORTFOLIO
 		=============================================== -->
-		<!-- <section id="portfolio" class="gray-bg padding-top-bottom">
+		<section id="portfolio" class="gray-bg padding-top-bottom">
 
 			<div class="container">
 
 				<header class="section-header text-center">
 
 					<h1 class="scrollimation scale-in">My Works</h1>
-					<p>Here is a list of works I have done for web development, graphic design and photography</p>
+					<p>Here is a list of mobile apps I have developed so far</p>
 
 				</header>
 
@@ -367,7 +363,7 @@
 					<ul>
 
 						<li class="scrollimation fade-right">
-							<a href="#" data-filter=".web-design">Web Design</a>
+							<a href="#" data-filter=".mobile_dev">Mobile Development</a>
 						</li>
 
 
@@ -381,22 +377,22 @@
 				<div id="projects-container">
 
 
-					<article class="project-item web-design">
+					<article class="project-item mobile_dev">
 
-						<img class="img-responsive project-image" src="assets/logo.jpg"  alt="">
+						<img class="img-responsive project-image text-center" src="assets/mellow.png"  alt="">
 
 						<div class="hover-mask">
-							<h2 class="project-title">AABumpers</h2>
-							<p>Car parts website</p>
+							<h2 class="project-title">Mellow App</h2>
+							<p>Mellow is a mobile application that was developed for young people dealing with crisis</p>
+							<p>Date: April, 2018</p>
+							<p>Client: George Brown College</p>
 						</div>
 
-
-
-						<div class="sr-only project-description"
-							data-category="Website"
-							data-date="November, 2016"
-							data-client="AABumpers and Fenders Ltd"
-							data-link="www.aabumpers.com,http://www.google.com"
+						<!-- <div class="sr-only project-description"
+							data-category="Mobile Application"
+							data-date="April, 2018"
+							data-client="George Brown College"
+							data-link="www.georgebrown.ca,http://www.google.com"
 							data-descr="Toronto, Canada"
 							data-images="assets/AA.PNG"
 						>
@@ -405,55 +401,41 @@
 							<p> Our job was to make a website itself with flexible database that allows employees to manupulate the data inside of it</p>
 							<p>The second goal was to make UI that simple for the user to find what he or she wants. </p>
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://aabumpers.com/index.php">Visit Website<i class="fa fa-arrow-right"></i></a></p>
-						</div>
+						</div> -->
 
 					</article>
 
+					<article class="project-item mobile_dev">
 
-
-
-					<article class="project-item web-design">
-
-						<img class="img-responsive project-image" src="assets/Casa2.jpg"  alt="">
+						<img class="img-responsive project-image" src="assets/data.png"  alt="">
 
 						<div class="hover-mask">
-							<h2 class="project-title">Casablanca Tobacconist</h2>
-							<p>Online Store Website</p>
-						</div>
-
-
-
-						<div class="sr-only project-description"
-							data-category="Online Store Website"
-							data-date="April, 2017"
-							data-client="Casablanca Tobacconist"
-							data-link="www.casablancatobacconist.com,http://www.google.com"
-							data-descr="Toronto, Canada"
-							data-images="assets/Store.jpg"
-						>
-							<p>Casablanca online store is huge website project that soon will be deployed</p>
-
-							<p>It features a great selection of various products that you can purchase. It took a lot of time to make the website of this scale.</p>
-							<p>It will offer a simple UI so you can search easily through thousands of products where every product features high resolution photo and description. It will let you pay with different payment methods like credit/debit card and PayPal. </p>
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="#external-link">Visit Website<i class="fa fa-arrow-right"></i></a></p>
+							<h2 class="project-title">Digital Analytics Testing Automation Tool</h2>
+							<p>DATA is an Android app which makes it easy to work with Google Analytics and Tag Manager services</p>
+							<p>Date: April, 2018</p>
+							<p>Client: ClickInsight Corporation</p>
 						</div>
 
 					</article>
 
+					<article class="project-item mobile_dev">
 
+						<img class="img-responsive project-image" src="assets/chat.png"  alt="">
 
-
+						<div class="hover-mask">
+							<h2 class="project-title">Futon Chat</h2>
+							<p>Futon App is a mobile messaging application that provides lots of chat-based functionalitites</p>
+							<p>Date: January, 2018</p>
+						</div>
 
 					</article>
-
-
 
 				</div>
 
 			</div>
 
 
-			<div id="project-modal" class="modal fade">
+			<!-- <div id="project-modal" class="modal fade">
 
 				<div class="modal-dialog">
 
@@ -501,11 +483,11 @@
 
 				</div>
 
-			</div>
+			</div> -->
 
 		</section>
 
-		<section id="dribbble">
+		<!-- <section id="dribbble">
 			<h1 class="dribbble-button"><a  target="_blank">My Photography</a></h1>
 				<div class="row">
 					<div class="col-md-2 col-sm-4 col-xs-6">
