--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		Title and Meta Tags
 		=============================================== -->
 		<meta charset="utf-8">
-		<title>MALIK IAVARI PROFESSIONAL</title>
+		<title>MALIK YAVARI PROFESSIONAL</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -96,7 +96,7 @@
 						</li>
 						<li id="logo">
 							<a href="#home" class="scrollto">
-								<h1>M<span>I</span></h1>
+								<h1>M<span>Y</span></h1>
 							</a>
 						</li>
 						<li>
@@ -123,7 +123,7 @@
 
 					<div class="col-sm-12 text-col text-center">
 
-						<h1>Hi, I'm MALIK IAVARI</h1>
+						<h1>MALIK YAVARI</h1>
 						<p>software developer, entrepreneur and martial artist</p>
 
 					</div>
@@ -534,7 +534,7 @@
 					</div>
 
 					<div class="col-sm-6 text-right">
-						<p>&copy; 2018 Malik Iavari.</p>
+						<p>&copy; 2018 Malik Yavari.</p>
 					</div>
 
 				</div>
