Adding recommendations section

--- a/index.html
+++ b/index.html
@@ -511,6 +511,32 @@
 				</div>
 		</section> -->
 
+		<section id="skills" class="white-bg">
+
+			<div class="container">
+
+				<div class="row skills">
+
+					<h1 class="text-center scrollimation fade-in">Recommendations from my professors and colleagues</h1>
+
+					<div class="col-sm-6 col-md-6 text-center">
+						<img class="img-responsive project-image" src="assets/linkedin1.png"  alt="">
+						</br>
+					</div>
+
+					<div class="col-sm-6 col-md-6 text-center">
+						<img class="img-responsive project-image" src="assets/linkedin2.png"  alt="">
+						</br>
+						</br>
+					</div>
+
+				</div><!--End row -->
+
+			</div>
+
+
+		</section>
+
 		<!-- ==============================================
 		FOOTER
 		=============================================== -->
