--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
 
 
-				<p class="text-center"><a  href="assets/Resume.pdf"><i class="fa fa-arrow-down"></i>Resume</a></p>
+				<!-- <p class="text-center"><a  href="assets/Resume.pdf"><i class="fa fa-arrow-down"></i>Resume</a></p> -->
 
 			</div>
 
