Added new apps for works section

--- a/index.html
+++ b/index.html
@@ -430,6 +430,31 @@
 
 					</article>
 
+					<article class="project-item mobile_dev">
+
+						<img class="img-responsive project-image" src="assets/greenvision.png"  alt="">
+
+						<div class="hover-mask">
+							<h2 class="project-title">Green Vision</h2>
+							<p>Green Vision is the concept of environmental social network where you can share natural environmental disasters.
+								This application was created by me and my team in just a 30 hours on the Hackathon which took place on March 9-10 in Whitby, Canada. </p>
+							<p>Date: March, 2018</p>
+						</div>
+
+					</article>
+
+					<article class="project-item mobile_dev">
+
+						<img class="img-responsive project-image" src="assets/nextgen.png"  alt="">
+
+						<div class="hover-mask">
+							<h2 class="project-title">Nextgen Clinic</h2>
+							<p>Nextgen Clinic is an Android application for clinic employees to allow them to store info about their patients.</p>
+							<p>Date: November, 2017</p>
+						</div>
+
+					</article>
+
 				</div>
 
 			</div>
