Changed MI to MY

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		Title and Meta Tags
 		=============================================== -->
 		<meta charset="utf-8">
-		<title>MALIK YAVARI PROFESSIONAL</title>
+		<title>Malik Yavari Pro</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -82,7 +82,7 @@
 					</button>
 
 					<!-- ======= LOGO (for small screens)========-->
-					<a class="navbar-brand visible-xs scrollto" href="#home">MI</a>
+					<a class="navbar-brand visible-xs scrollto" href="#home">MY</a>
 
 				</div>
 
