Adding new recommendations

--- a/index.html
+++ b/index.html
@@ -555,6 +555,17 @@
 						</br>
 					</div>
 
+					<div class="col-sm-6 col-md-6 text-center">
+						<img class="img-responsive project-image" src="assets/linkedin3.png"  alt="">
+						</br>
+					</div>
+
+					<div class="col-sm-6 col-md-6 text-center">
+						<img class="img-responsive project-image" src="assets/linkedin4.png"  alt="">
+						</br>
+						</br>
+					</div>
+
 				</div><!--End row -->
 
 			</div>
