--- a/index.html
+++ b/index.html
@@ -577,6 +577,11 @@
 						</br>
 					</div>
 
+					<div class="col-sm-6 col-md-6 text-center">
+						<img class="img-responsive project-image" src="assets/linkedin7.png"  alt="">
+						</br>
+					</div>
+
 				</div><!--End row -->
 
 			</div>
