Updating the bio

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div class="col-sm-12 text-col text-center">
 
 						<h1>MALIK YAVARI</h1>
-						<p>software developer, entrepreneur and martial artist</p>
+						<p>mobile application developer and martial artist</p>
 
 					</div>
 
@@ -240,7 +240,7 @@
 
 						<img class="img-responsive img-center img-circle scrollimation fade-left" src="assets/profile.jpg" alt="" />
 
-						<p class="text-center scrollimation fade-in"> I have the savvy, experience, and superior communication ability to be an asset to your company. I am super competent in IT, my passion is to deliver my best work, make the company more profitable and stick on top positions. Moreover, I offer competitive business IT solutions in web and mobile development. My main goal is to make the product attractive for end users and help my clients to create experiences, services and products that play a meaningful role in people's lives.</p>
+						<p class="text-center scrollimation fade-in"> A hard-working, adept and self-motivated professional in Information Technology industry. Very competent and enthusiastic with the passion to create experiences, services and products that play a meaningful role in people's lives as well as offer competitive business IT solutions in web and mobile environment.</p>
 
 					</div>
 
