Updated profile picture

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div class="col-sm-12 text-col text-center">
 
 						<h1>MALIK YAVARI</h1>
-						<p>mobile application developer and martial artist</p>
+						<p>software developer and martial artist</p>
 
 					</div>
 
